--- a/Firstshop.html
+++ b/Firstshop.html
@@ -14,7 +14,10 @@
         </pre>
 
     </h1>
-
+     <p>
+        We provide the option of flexible delivery date and time, insurance of items, 
+        hassle free exchange policy and even cash on delivery which is the biggest added advantage.
+     </p>
     <p>The most important advantage of online shopping is that we can compare 
         the prices of various items across several eCommerce website. 
         In this way, we are assured the best deal.</p>
