--- a/Firstshop.html
+++ b/Firstshop.html
@@ -33,7 +33,7 @@
          <img src = "media/multicolor.jfif"/>
          <img src = "media/pinktop.jfif"/>
          <img src = "media/checks.jfif"/>
-
+        
 
      <table border = "1" cellspacing = "0" cellpadding = "10px">
          <pre>
@@ -85,6 +85,10 @@
 
 <img src = "media/jeans.jfif">
 <img src = "media/jeansankle.jfif"/>
+<img src = "media/combo.jfif"/>
+<img src = "media/denim.jfif"/>
+<img src = "media/printed jeans.jfif"/>
+<img src = "media/pink.jfif"/>
 
 
      <table border = "1">
